sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value change
		change(i,i+1)
                ^AlgCocktailSort1:15: error: not found: value change
		change(i,i+1)
                ^