sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() 
{
for(i<-0 to getNombreValeurs()-2)
{
	if(plusPetit(i,i+1))
	{
		change(i,i+1)
	}
}
for(i<-getNombreValeurs()-2 to 0 by -1)
{
	if(plusPetit(i,i+1))
	{
		change(i,i+1)
	}
}
}
